# grease

./: .gitignore  Cargo.toml  README.md  design_ideas.txt
migrations/2017-12-23-052736_create_tables/: down.sql  up.sql
scripts/: events.js  login.js  repertoire.js
src/: lib.rs  main.rs
src/db/: mod.rs  pool.rs
src/db/models/: attendance.rs  carpool.rs  event.rs  file.rs  link.rs  mod.rs  song.rs  user.rs
src/io/: config.rs  mod.rs  pages.rs
src/server/: mod.rs  routes.rs  state_models.rs
static/styles/: main.css
templates/: attendance.html  base.html  events.html  index.html  login.html  register.html  repertoire.html  single_event.html  single_song.html
